# urclos-barebones

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  dump.sh  gdt.c  gdt.h  gen_diskfs.py  gen_ramfs.py  gen_urclos_fs.py  grub.cfg  ignoreme_make_gdt.c  kernel.c  to_le.py  urcl.opt2.s  urcl.urcl  urclos_fs.h  x86_64-blog_os.json
kernel/: Cargo.toml
kernel/src/: console.rs  gdt.rs  interrupts.rs  main.rs  psf.rs
src/: ata.rs  bindings.rs  console.rs  fs.rs  interrupts.rs  keyboard.rs  main.rs  serial.rs  vga_buffer.rs
