[package]
name = "urclos"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>", "funnsam"]
edition = "2021"
links = "urcl"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
raw-cpuid = "11.0.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]
ramfs = []
